--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Go Note</title>
+		<link rel="stylesheet" href="custom-style.css">
 	</head>
 	<body>
 		<img src="https://images.pexels.com/photos/317154/pexels-photo-317154.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Tło" width="520" height="315">
