Implementation of CSS rules

--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
 		<link rel="stylesheet" href="custom-style.css">
 	</head>
 	<body>
-		<img src="https://images.pexels.com/photos/317154/pexels-photo-317154.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Tło" width="520" height="315">
-		<div>
+		<img class="main-image" src="https://images.pexels.com/photos/317154/pexels-photo-317154.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Tło" width="520" height="315">
+		<div id="main-header">
 			<h1>GO Note</h1>
 			<p>Aplikacja do zarządzania swoimi <strong>notatkami</strong>.</p>
 		</div>
